--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Interpréteur de pseudo-code fait en Java.
+﻿Interpréteur de pseudo-code fait en Java.
 
 Copyright (C) 2011 Louis-Étienne Dorval, Alexis Légaré-Julien, 
 Frédérik Paradis et Simon Perreault
